--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,16 @@
 DATABASE_URL=
-AUTH_SECRET=
+
+
+# uncomment next line if you use Prisma <5.10
+# DATABASE_URL_UNPOOLED="postgresql://auth-tutorial_owner:86CnujqlSZNr@ep-odd-fire-a57ps9b7.us-east-2.aws.neon.tech/auth-tutorial?sslmode=require"
+
+#Generado con "openssl rand -base64 33"
+AUTH_SECRET=WjznaqVD3sgzkbIoM7BuzTOOXkMim7kgKld6tIjgPQp+
+
+#https://console.cloud.google.com/apis/credentials?pli=1
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+#Estos se generan en Github -> account -> settings -> Developer settings -> OAuth Apps
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
