--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "clsx": "^2.1.1",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.19",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-spinners": "^0.14.1",
     "resend": "^3.5.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
