Finished Demo screens and project

--- a/.env.template
+++ b/.env.template
@@ -14,3 +14,6 @@ GITHUB_CLIENT_SECRET=
 
 #Email provider resend.com
 RESEND_API_KEY=
+
+#Base url of the app
+NEXT_PUBLIC_APP_URL=http://localhost:3000
